kubernetes/kuber-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-api-deployment
spec:
  selector:
    matchLabels:
      app: kuber-api
  template:
    metadata:
      labels:
        app: kuber-api
    spec:
      containers:
        - name: kuber-api
          image: kenule500/kuber-api:v1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-api-service
spec:
  selector:
    app: kuber-api
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 3000
